300-registry-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: registry
  name: registry
  labels:
    app: registry

spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2.7.1
          ports:
            - name: registry
              containerPort: 5000
          volumeMounts:
            - name: credentials
              mountPath: /auth
              readOnly: true
      volumes:
        - name: credentials
          secret:
            secretName: basic-auth
