600-registry-ui-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: registry
  name: registry-ui
  labels:
    app: registry-ui

spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:2.0
          ports:
            - name: registry-ui
              containerPort: 80
