200-registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry

spec:
  ports:
    - protocol: TCP
      name: registry
      port: 5000
  selector:
    app: registry
