500-registry-ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry

spec:
  ports:
    - protocol: TCP
      name: registry-ui
      port: 80
  selector:
    app: registry-ui
