400-registry-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: registry

spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`registry.mydomain.io`)
    kind: Rule
    services:
      - name: registry
        port: 5000
  tls:
    certResolver: tlsresolver
